# fedlearn-backdoor-attacks

./: .gitignore  README.md  data_loader.py  download_datasets.py  federated_trainer.py  gen_exps_config.py  plot_tsne_master.py  pyproject.toml  requirements.txt  result_excel.py  result_excel_alpha.py  result_excel_gama_p.py  run_exps_tmux.py  run_federated.py  tmux_queue.py  tmux_queue_dynamic.py  命令.txt
configs/: badnets_cifar10.yaml  base.yaml  clean_base_cifar10.yaml  clean_base_cifar100.yaml
core/: __init__.py  aggregations.py  attacks.py  client.py  defenses.py  edge_case_datasets.py  framework.py  memory.py  models.py  server.py  utils.py
core/custom_models/: __init__.py  lenet.py  regression.py  resnet.py  simplecnn.py  vgg.py
